[tool.poetry]
name = "py-code-style-template"
version = "0.1.0"
description = "Python code style template"
authors = ["Erfan Miahi <mhi.erfan1@gmail.com>"]
packages = [
    { include = "src" }
]


[tool.poetry.dependencies]
python = ">=3.10"
torch = "^2.6.0"


[tool.black]
line-length = 79
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79 

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"
flake8-quotes = "^3.4.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"
mypy = "^1.14.1"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 